[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Models/Player/New Piskel.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 320, 350 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 320, 350 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 0, 320, 350 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 350, 320, 350 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 350, 320, 350 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 640, 350, 320, 350 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 700, 320, 350 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 320, 700, 320, 350 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=10]
radius = 45.0702
height = 265.177

[node name="Player" type="Area2D"]
position = Vector2( 155.049, 425.461 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 9 )
animation = "walk"

[node name="PlayerHitbox" type="CollisionShape2D" parent="."]
position = Vector2( 6.7348, -2.24492 )
shape = SubResource( 10 )
[connection signal="area_entered" from="." to="." method="playerHit"]
[connection signal="area_exited" from="." to="." method="playerNotHit"]
